[project]
name = "resnet-reimplementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scipy>=1.10.0",
]
