[project]
name = "unet-reimplementation"
version = "0.1.0"
description = "We provide a project to reimplement the U-Net architecture for cell segmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticdeform>=0.5.1",
    "matplotlib>=3.10.7",
    "numpy<2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "kaggle>=1.6.14",
]
